Drop old JVM tuning parameters